// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload file-to-data-set handler process method should display error when uploading found file to data set 1`] = `
Object {
  "apiResponse": Array [
    Object {
      "from": "test-file",
      "success": false,
      "to": "testing",
    },
  ],
  "commandResponse": "uploaded",
  "success": false,
}
`;

exports[`Upload file-to-data-set handler process method should display error when uploading found file to data set 2`] = `""`;

exports[`Upload file-to-data-set handler process method should display error when uploading found file to data set 3`] = `
"
uploaded"
`;

exports[`Upload file-to-data-set handler process method should not attempt to upload a file that hasn't been found 1`] = `undefined`;

exports[`Upload file-to-data-set handler process method should not attempt to upload a file that hasn't been found 2`] = `""`;

exports[`Upload file-to-data-set handler process method should not attempt to upload a file that hasn't been found 3`] = `
"
Error: File does not exist or is not accessible"
`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set if requested 1`] = `
Object {
  "apiResponse": Array [
    Object {
      "from": "test-file",
      "success": true,
      "to": "testing",
    },
    Object {
      "from": "testfrom",
      "success": false,
      "to": "testto",
    },
    Object {
      "from": "dummy",
      "success": undefined,
      "to": "nowhere",
    },
  ],
  "commandResponse": "uploaded",
  "success": true,
}
`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set if requested 2`] = `""`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set if requested 3`] = `
"
uploaded"
`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set in binary format if requested 1`] = `
Object {
  "apiResponse": Array [
    Object {
      "from": "test-file",
      "success": true,
      "to": "testing",
    },
  ],
  "commandResponse": "uploaded",
  "success": true,
}
`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set in binary format if requested 2`] = `""`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set in binary format if requested 3`] = `
"
uploaded"
`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set in record format if requested 1`] = `
Object {
  "apiResponse": Array [
    Object {
      "from": "test-file",
      "success": true,
      "to": "testing",
    },
  ],
  "commandResponse": "uploaded",
  "success": true,
}
`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set in record format if requested 2`] = `""`;

exports[`Upload file-to-data-set handler process method should upload a file to a data set in record format if requested 3`] = `
"
uploaded"
`;
